<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:text="@string/main_title"/>

    <ImageView
        android:id="@+id/foto_bintang"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/photo_foreground"
        android:contentDescription="@string/foto_bintang"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="@string/sambutan_title"/>

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:layout_marginTop="16dp"
        android:text="@string/sambutan_content"/>

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/go_to_profile"/>

    <Button
        android:id="@+id/btn_git_hub"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_my_github"/>

</LinearLayout>
